force-app/main/default/objects/DetailedReportItem__x/DetailedReportItem__x.object-meta.xml
<CustomObject>
    <externalDataSource>Toggl_Data_Source</externalDataSource>
    <externalName>details</externalName>
    <label>Detailed Report Item</label>
    <pluralLabel>Detailed Report Items</pluralLabel>
</CustomObject>