force-app/main/default/objects/DetailedReportItem__x/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <externalDeveloperName>dur</externalDeveloperName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>