force-app/main/default/objects/DetailedReportItem__x/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <externalDeveloperName>end</externalDeveloperName>
    <label>End Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>