force-app/main/default/objects/DetailedReportItem__x/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <externalDeveloperName>pid</externalDeveloperName>
    <label>Project Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>