force-app/main/default/objects/DetailedReportItem__x/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <externalDeveloperName>start</externalDeveloperName>
    <label>Start Time</label>
    <length>20</length>
    <type>Text</type>
</CustomField>