force-app/main/default/objects/DetailedReportItem__x/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExternalId</columns>
    <columns>Project_Id__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Client_Name__c</columns>
    <columns>Start_Time__c</columns>
    <columns>End_Time__c</columns>
    <columns>Duration__c</columns>
    <columns>DisplayUrl</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>